--- a/index.html
+++ b/index.html
@@ -1,83 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MCQ Quiz</title>
-  <style>
-    /* Same styling as before */ 
-  </style>
+    <title>Microbiology MCQ Quiz</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="quiz-container">
-    <h2 id="question"></h2>
-    <div id="options"></div>
-    <button id="next-btn">Next</button>
-    <p id="result"></p>
-  </div>
+    <div id="startQuiz">
+        <h2>Microbiology MCQ Quiz</h2>
+        <input type="text" id="studentName" placeholder="Name" required>
+        <input type="text" id="groupNumber" placeholder="Group Number" required>
+        <button type="button" id="beginQuiz">Start Quiz</button>
+    </div>
 
-  <script>
-    const questions = [
-        // ... (Your 10 questions here)
-    ];
+    <div id="quizContainer" style="display: none;">
+        <div id="question"></div>
+        <div id="choices"></div>
+        <button type="button" id="nextButton">Next</button>
+    </div>
 
-    questions.sort(() => Math.random() - 0.5);
-
-    let currentQuestion = 0;
-    let score = 0;
-    let correctAnswers = [];
-    let incorrectAnswers = [];
-
-    const questionElement = document.getElementById("question");
-    const optionsElement = document.getElementById("options");
-    const nextButton = document.getElementById("next-btn");
-    const resultElement = document.getElementById("result");
-    const quizContainer = document.getElementById("quiz-container");
-
-    function loadQuestion() {
-        const currentQ = questions[currentQuestion];
-        questionElement.textContent = currentQ.question;
-
-        optionsElement.innerHTML = "";
-        currentQ.options.forEach((option, index) => { // Use index for radio button values
-            const label = document.createElement("label");
-            label.innerHTML = `<input type="radio" name="answer" value="${index}"> ${option}`;
-            optionsElement.appendChild(label);
-        });
-    }
-
-    nextButton.addEventListener("click", () => {
-        const selectedOption = document.querySelector('input[name="answer"]:checked');
-        if (selectedOption) {
-            const currentQ = questions[currentQuestion];
-
-            if (selectedOption.value == currentQ.options.indexOf(currentQ.answer)) {
-                score++;
-                correctAnswers.push(currentQ);
-            } else {
-                incorrectAnswers.push(currentQ);
-            }
-
-            currentQuestion++;
-
-            if (currentQuestion < questions.length) {
-                loadQuestion();
-            } else {
-                showResult();
-            }
-        }
-    });
-
-    function showResult() {
-        quizContainer.style.display = "none";
-        resultElement.innerHTML = `
-            <h3>You scored ${score} out of ${questions.length}!</h3>
-            <h4>Correct Answers (${correctAnswers.length}):</h4>
-            <ul>${correctAnswers.map(q => `<li>${q.question} - ${q.answer}</li>`).join('')}</ul>
-            <h4>Incorrect Answers (${incorrectAnswers.length}):</h4>
-            <ul>${incorrectAnswers.map(q => `<li>${q.question} - Your answer: ${q.options[parseInt(document.querySelector(`input[name="answer"]:checked`).value)]}<br>Correct answer: ${q.answer}</li>`).join('')}</ul>
-        `;
-    }
-
-    loadQuestion();
-  </script>
+    <div id="resultContainer" style="display: none;">
+        <h2>Results</h2>
+        <p id="score"></p>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
