--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Microbiology MCQ Quiz</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    </head>
 <body>
     <div id="startQuiz">
         <h2>Microbiology MCQ Quiz</h2>
@@ -22,6 +20,6 @@
         <h2>Results</h2>
         <p id="score"></p>
     </div>
-    <script src="script.js"></script>
-</body>
+    
+    <script src="script.js"></script> </body>
 </html>
